@@ -1,3 +1,8 @@
+2004-11-08  Tom Tromey  <tromey@redhat.com>
+
+	* include/jvm.h (_Jv_CheckAssignment): Removed.
+	* java/lang/natClass.cc (_Jv_CheckAssignment): Removed.
+
 2004-11-05  Tom Tromey  <tromey@redhat.com>
 
 	* link.cc (verify_type_assertions): Ensure classes have supers
